[package]
name = "kio"
version = "0.1.0"
authors = ["Joshua Lane <me@joshualane.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.33"
env_logger = "0.7.1"
futures = "0.3"
hdrhistogram = "7.0.0"
log = "0.4"
rand = "0.3.15"
rdkafka = { version = "0.24", features = ["cmake-build"] }
regex = "1.1.6"
smol = { version = "0.1.7" }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
