[package]
name = "kio"
version = "0.1.0"
authors = ["Joshua Lane <me@joshualane.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/lanej/kio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
clap = "2.33"
env_logger = "0.7.1"
log = "0.4"
rdkafka = { version = "0.24", default_features = false }
serde_json = "1.0"
prettytable-rs = "^0.8"
